--- a/DLLs/liblitexml/liblitexml.vcxproj
+++ b/DLLs/liblitexml/liblitexml.vcxproj
@@ -74,6 +74,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="liblitexml.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="liblitexml.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
