--- a/3DEngine/3DEngine/3DEngine.vcxproj
+++ b/3DEngine/3DEngine/3DEngine.vcxproj
@@ -52,7 +52,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\Peter\Documents\GitHub\3DEngine\DLLs\liblitexml;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Jack\Documents\GitHub\3DEngine\DLLs\liblitexml;C:\Users\Peter\Documents\GitHub\3DEngine\DLLs\liblitexml;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
