--- a/3DEngine/3DEngine/3DEngine.vcxproj.filters
+++ b/3DEngine/3DEngine/3DEngine.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="stdh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="utilities.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EngineMain.cpp">
