--- a/DirectInput/DirectInput.vcxproj
+++ b/DirectInput/DirectInput.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{1FF70E71-1BE8-46DB-A6BC-01BF906F15F8}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>DirectInput</RootNamespace>
+    <ProjectName>libinput</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -41,6 +42,7 @@
     <LinkIncremental>true</LinkIncremental>
     <LibraryPath>C:\Program Files %28x86%29\Microsoft_DirectX_SDK_%28June 2010%29\Lib\x86;$(LibraryPath)</LibraryPath>
     <IncludePath>C:\Program Files %28x86%29\Microsoft_DirectX_SDK_%28June 2010%29\Include;$(IncludePath)</IncludePath>
+    <TargetName>$(ProjectName)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -80,10 +82,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="DirectInput.h" />
+    <ClInclude Include="libinput.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DirectInput.cpp" />
+    <ClCompile Include="libinput.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
