Jack I'm trying to do encryption on the xml files
CAN YOU FIX IT PLEASE!!11!

--- a/DLLs/liblitexml/liblitexml.vcxproj
+++ b/DLLs/liblitexml/liblitexml.vcxproj
@@ -50,6 +50,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;LIBLITEXML_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>C:\Users\Peter\Documents\GitHub\3DEngine\DLLs\libenc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
